--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,20 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.30</version>
         </dependency>
+		<dependency>
+			<groupId>com.splunk</groupId>
+			<artifactId>splunk</artifactId>
+			<version>1.6.0.0</version>
+		</dependency>
 	</dependencies>
+
+	<repositories>
+	  <repository>
+	   <id>splunk-artifactory</id>
+	   <name>Splunk Releases</name>
+	   <url>http://splunk.artifactoryonline.com/splunk/ext-releases-local</url>
+	  </repository>
+	</repositories>
 
 	<build>
 		<plugins>
